# awx

./: .codecov.yml  .coveragerc  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  FEATURES.md  ISSUES.md  LICENSE  MANIFEST.in  Makefile  README.md  pytest.ini  setup.cfg  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  triage_replies.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: api_schema_check.yml  ci.yml  devel_images.yml  docs.yml  feature_branch_deletion.yml  feature_branch_sync.yml  label_issue.yml  label_pr.yml  promote.yml  sonarcloud_pr.yml  stage.yml  upload_schema.yml
awx/: __init__.py  resource_api.py  urls.py
awx/api/: conf.py  generics.py  permissions.py  schema.py  serializers.py  swagger.py
awx/conf/: fields.py  registry.py  settings.py
awx/main/: access.py  apps.py  conf.py  constants.py  consumers.py  exceptions.py  fields.py  managers.py  middleware.py  queue.py  routing.py  signals.py
awx/playbooks/: project_update.yml
awx/settings/: __init__.py  application_name.py  defaults.py  development.py  development_defaults.py  development_kube.py  development_quiet.py  functions.py  production.py  production_defaults.py  quiet_defaults.py
awx/sso/: middleware.py
awx/ui/: Makefile  package-lock.json  package.json
awx_collection/: README.md  TESTING.md
awx_collection/meta/: runtime.yml
awxkit/: setup.py  tox.ini
awxkit/awxkit/: config.py  ws.py
awxkit/test/: test_ws.py
deploy/crds/: awx_v1beta1_awx_crd.yaml
deploy/operator/: deployment.yaml
docs/: capacity.md  collections.md  execution_environments.md  schedules.md  tasks.md
ee-builder/: README.md  pyproject.toml
ee-builder/awx_ee/: __init__.py  builder.py  cli.py
ee-builder/awx_ee/models/: __init__.py  ee_spec.py
ee-builder/awx_ee/templates/: Dockerfile.j2
licenses/: OPA-python-client.txt  pycares.txt
operator/: pyproject.toml
operator/awx_operator/: __init__.py  __main__.py
operator/awx_operator/handlers/: __init__.py  awx_handler.py
operator/awx_operator/models/: __init__.py  awx.py  backup.py  mesh_ingress.py  restore.py
operator/awx_operator/utils/: __init__.py  autoscaler.py  cloud_backup.py  health.py  k8s_client.py  metrics.py  validators.py
operator/tests/unit/: test_autoscaler.py  test_cloud_backup.py  test_models.py  test_validators.py
requirements/: README.md  requirements.in  requirements.txt  requirements_dev.txt  requirements_git.credentials.txt  requirements_git.txt  updater.sh
(+408 files in other folders)
